--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
     />
 
-    <title>React App</title>
+    <title>Crypto converter by Ali to WITS</title>
   </head>
   <body>
     <div id="root"></div>
